deployment.yml
---
apiVersion: v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLables:
      app: nginx
  template:
    metadata:
      lables:
        app: nginx 
    spec:
      containers:
        - name: cont1
          image: saikumar1903/phpapp:appimage
          ports:
            - containerPort: 80
        #configmap Intergration
          resources:
            requests: 
              cpu: "100m"
              memory: "128Mi"
            limits: 
              cpu: "200m"
              memory: "256Mi"

          livenessProbes:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbes:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
