satefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysqldb

spec:
  serviceName: mysqldb
  replicas: 1

  selector:
    matchLabels:
      app: app-database

  template:
    metadata:
      labels:
        app: app-database

    spec:
      containers:
      - name: dbcont
        image: saikumar1903/phpapp:dbimage

        ports:
        - containerPort: 3306

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

        volumeMounts:
        - name: pvc-1
          mountPath: /usr/share/nginx/html/

  volumeClaimTemplates:
  - metadata:
      name: pvc-1
    spec:
      storageClassName: gp2
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
